[gd_scene load_steps=8 format=3 uid="uid://6127v5b0re7j"]

[ext_resource type="Script" path="res://Scripts/UI/scrMenuMain.gd" id="1_7emf3"]
[ext_resource type="PackedScene" uid="uid://dihcyhsflfr2g" path="res://Objects/Backgrounds/Specific_backgrounds/objBackgroundMenus.tscn" id="1_qj5f2"]
[ext_resource type="PackedScene" uid="uid://wr3v4lkgftxk" path="res://Objects/Tiles/til16x16.tscn" id="2_b4bxb"]
[ext_resource type="PackedScene" uid="uid://byy0nyaw6gtki" path="res://Objects/Room_objects/objMusicPlayer.tscn" id="3_h0b7q"]
[ext_resource type="AudioStream" uid="uid://bnnwvgmabq10w" path="res://Audio/Music/musMainMenu.ogg" id="4_o77qd"]
[ext_resource type="FontFile" uid="uid://4m283seugry" path="res://Graphics/Fonts/NFPixels-Regular.otf" id="5_uvw3o"]
[ext_resource type="PackedScene" uid="uid://614aveijpptq" path="res://Objects/UI/objMenuButton.tscn" id="7_34exa"]

[node name="rMenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7emf3")
files_menu = "res://Rooms/00_Title_and_menus/rMenuFiles.tscn"
settings_menu = "res://Rooms/00_Title_and_menus/rMenuSettings.tscn"
metadata/_edit_lock_ = true

[node name="Environment" type="Node2D" parent="."]

[node name="objBackgroundMenus" parent="Environment" instance=ExtResource("1_qj5f2")]
metadata/_edit_lock_ = true

[node name="til16x16" parent="Environment" instance=ExtResource("2_b4bxb")]
modulate = Color(0.00392157, 0.643137, 0.85098, 1)
layer_0/tile_data = PackedInt32Array(131072, 65537, 0, 917504, 65537, 2, 917505, 65537, 2, 917506, 65537, 2, 917507, 65537, 2, 917508, 65537, 2, 917509, 65537, 2, 917510, 65537, 2, 917511, 65537, 2, 917512, 65537, 2, 917513, 65537, 2, 917514, 65537, 2, 917515, 65537, 2, 917516, 65537, 2, 917517, 65537, 2, 917518, 65537, 2, 917519, 65537, 2, 917520, 65537, 2, 917521, 65537, 2, 917522, 65537, 2, 917523, 65537, 2, 917524, 65537, 2, 917525, 65537, 2, 917526, 65537, 2, 917527, 65537, 2, 917528, 65537, 2, 917529, 65537, 2, 917530, 65537, 2, 917531, 65537, 2, 917532, 65537, 2, 917533, 65537, 2, 917534, 65537, 2, 917535, 65537, 2, 917536, 65537, 2, 917537, 65537, 2, 917538, 65537, 2, 917539, 65537, 2, 917540, 65537, 2, 917541, 65537, 2, 917542, 65537, 2, 917543, 65537, 2, 917544, 65537, 2, 917545, 65537, 2, 917546, 65537, 2, 917547, 65537, 2, 917548, 65537, 2, 917549, 65537, 2, 917550, 65537, 2, 917551, 65537, 2, 917552, 65537, 2, 917553, 65537, 2, 131073, 65537, 0, 131074, 65537, 0, 131075, 65537, 0, 131076, 65537, 0, 131077, 65537, 0, 131078, 65537, 0, 131079, 65537, 0, 131080, 65537, 0, 131081, 65537, 0, 131082, 65537, 0, 131083, 65537, 0, 131084, 65537, 0, 131085, 65537, 0, 131086, 65537, 0, 131087, 65537, 0, 131088, 65537, 0, 131089, 65537, 0, 131090, 65537, 0, 131091, 65537, 0, 131092, 65537, 0, 131093, 65537, 0, 131094, 65537, 0, 131095, 65537, 0, 131096, 65537, 0, 131097, 65537, 0, 131098, 65537, 0, 131099, 65537, 0, 131100, 65537, 0, 131101, 65537, 0, 131102, 65537, 0, 131103, 65537, 0, 131104, 65537, 0, 131105, 65537, 0, 131106, 65537, 0, 131107, 65537, 0, 131108, 65537, 0, 131109, 65537, 0, 131110, 65537, 0, 131111, 65537, 0, 131112, 65537, 0, 131113, 65537, 0, 131114, 65537, 0, 131115, 65537, 0, 131116, 65537, 0, 131117, 65537, 0, 131118, 65537, 0, 131119, 65537, 0, 131120, 65537, 0, 131121, 65537, 0, 196608, 65537, 1, 262144, 65537, 1, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 65537, 1, 720896, 65537, 1, 786432, 65537, 1, 851968, 65537, 1, 196609, 65537, 1, 262145, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 720897, 65537, 1, 786433, 65537, 1, 851969, 65537, 1, 196610, 65537, 1, 262146, 65537, 1, 327682, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 655362, 65537, 1, 720898, 65537, 1, 786434, 65537, 1, 851970, 65537, 1, 196611, 65537, 1, 262147, 65537, 1, 327683, 65537, 1, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 655363, 65537, 1, 720899, 65537, 1, 786435, 65537, 1, 851971, 65537, 1, 196612, 65537, 1, 262148, 65537, 1, 327684, 65537, 1, 393220, 65537, 1, 458756, 65537, 1, 524292, 65537, 1, 589828, 65537, 1, 655364, 65537, 1, 720900, 65537, 1, 786436, 65537, 1, 851972, 65537, 1, 196613, 65537, 1, 262149, 65537, 1, 327685, 65537, 1, 393221, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 655365, 65537, 1, 720901, 65537, 1, 786437, 65537, 1, 851973, 65537, 1, 196614, 65537, 1, 262150, 65537, 1, 327686, 65537, 1, 393222, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 589830, 65537, 1, 655366, 65537, 1, 720902, 65537, 1, 786438, 65537, 1, 851974, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, 327687, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 65537, 1, 589831, 65537, 1, 655367, 65537, 1, 720903, 65537, 1, 786439, 65537, 1, 851975, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 65537, 1, 393224, 65537, 1, 458760, 65537, 1, 524296, 65537, 1, 589832, 65537, 1, 655368, 65537, 1, 720904, 65537, 1, 786440, 65537, 1, 851976, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 65537, 1, 393225, 65537, 1, 458761, 65537, 1, 524297, 65537, 1, 589833, 65537, 1, 655369, 65537, 1, 720905, 65537, 1, 786441, 65537, 1, 851977, 65537, 1, 196618, 65537, 1, 262154, 65537, 1, 327690, 65537, 1, 393226, 65537, 1, 458762, 65537, 1, 524298, 65537, 1, 589834, 65537, 1, 655370, 65537, 1, 720906, 65537, 1, 786442, 65537, 1, 851978, 65537, 1, 196619, 65537, 1, 262155, 65537, 1, 327691, 65537, 1, 393227, 65537, 1, 458763, 65537, 1, 524299, 65537, 1, 589835, 65537, 1, 655371, 65537, 1, 720907, 65537, 1, 786443, 65537, 1, 851979, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, 393228, 65537, 1, 458764, 65537, 1, 524300, 65537, 1, 589836, 65537, 1, 655372, 65537, 1, 720908, 65537, 1, 786444, 65537, 1, 851980, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, 327693, 65537, 1, 393229, 65537, 1, 458765, 65537, 1, 524301, 65537, 1, 589837, 65537, 1, 655373, 65537, 1, 720909, 65537, 1, 786445, 65537, 1, 851981, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 327694, 65537, 1, 393230, 65537, 1, 458766, 65537, 1, 524302, 65537, 1, 589838, 65537, 1, 655374, 65537, 1, 720910, 65537, 1, 786446, 65537, 1, 851982, 65537, 1, 196623, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 458767, 65537, 1, 524303, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 720911, 65537, 1, 786447, 65537, 1, 851983, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 393232, 65537, 1, 458768, 65537, 1, 524304, 65537, 1, 589840, 65537, 1, 655376, 65537, 1, 720912, 65537, 1, 786448, 65537, 1, 851984, 65537, 1, 196625, 65537, 1, 262161, 65537, 1, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 1, 589841, 65537, 1, 655377, 65537, 1, 720913, 65537, 1, 786449, 65537, 1, 851985, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 393234, 65537, 1, 458770, 65537, 1, 524306, 65537, 1, 589842, 65537, 1, 655378, 65537, 1, 720914, 65537, 1, 786450, 65537, 1, 851986, 65537, 1, 196627, 65537, 1, 262163, 65537, 1, 327699, 65537, 1, 393235, 65537, 1, 458771, 65537, 1, 524307, 65537, 1, 589843, 65537, 1, 655379, 65537, 1, 720915, 65537, 1, 786451, 65537, 1, 851987, 65537, 1, 196628, 65537, 1, 262164, 65537, 1, 327700, 65537, 1, 393236, 65537, 1, 458772, 65537, 1, 524308, 65537, 1, 589844, 65537, 1, 655380, 65537, 1, 720916, 65537, 1, 786452, 65537, 1, 851988, 65537, 1, 196629, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 1, 589845, 65537, 1, 655381, 65537, 1, 720917, 65537, 1, 786453, 65537, 1, 851989, 65537, 1, 196630, 65537, 1, 262166, 65537, 1, 327702, 65537, 1, 393238, 65537, 1, 458774, 65537, 1, 524310, 65537, 1, 589846, 65537, 1, 655382, 65537, 1, 720918, 65537, 1, 786454, 65537, 1, 851990, 65537, 1, 196631, 65537, 1, 262167, 65537, 1, 327703, 65537, 1, 393239, 65537, 1, 458775, 65537, 1, 524311, 65537, 1, 589847, 65537, 1, 655383, 65537, 1, 720919, 65537, 1, 786455, 65537, 1, 851991, 65537, 1, 196632, 65537, 1, 262168, 65537, 1, 327704, 65537, 1, 393240, 65537, 1, 458776, 65537, 1, 524312, 65537, 1, 589848, 65537, 1, 655384, 65537, 1, 720920, 65537, 1, 786456, 65537, 1, 851992, 65537, 1, 196633, 65537, 1, 262169, 65537, 1, 327705, 65537, 1, 393241, 65537, 1, 458777, 65537, 1, 524313, 65537, 1, 589849, 65537, 1, 655385, 65537, 1, 720921, 65537, 1, 786457, 65537, 1, 851993, 65537, 1, 196634, 65537, 1, 262170, 65537, 1, 327706, 65537, 1, 393242, 65537, 1, 458778, 65537, 1, 524314, 65537, 1, 589850, 65537, 1, 655386, 65537, 1, 720922, 65537, 1, 786458, 65537, 1, 851994, 65537, 1, 196635, 65537, 1, 262171, 65537, 1, 327707, 65537, 1, 393243, 65537, 1, 458779, 65537, 1, 524315, 65537, 1, 589851, 65537, 1, 655387, 65537, 1, 720923, 65537, 1, 786459, 65537, 1, 851995, 65537, 1, 196636, 65537, 1, 262172, 65537, 1, 327708, 65537, 1, 393244, 65537, 1, 458780, 65537, 1, 524316, 65537, 1, 589852, 65537, 1, 655388, 65537, 1, 720924, 65537, 1, 786460, 65537, 1, 851996, 65537, 1, 196637, 65537, 1, 262173, 65537, 1, 327709, 65537, 1, 393245, 65537, 1, 458781, 65537, 1, 524317, 65537, 1, 589853, 65537, 1, 655389, 65537, 1, 720925, 65537, 1, 786461, 65537, 1, 851997, 65537, 1, 196638, 65537, 1, 262174, 65537, 1, 327710, 65537, 1, 393246, 65537, 1, 458782, 65537, 1, 524318, 65537, 1, 589854, 65537, 1, 655390, 65537, 1, 720926, 65537, 1, 786462, 65537, 1, 851998, 65537, 1, 196639, 65537, 1, 262175, 65537, 1, 327711, 65537, 1, 393247, 65537, 1, 458783, 65537, 1, 524319, 65537, 1, 589855, 65537, 1, 655391, 65537, 1, 720927, 65537, 1, 786463, 65537, 1, 851999, 65537, 1, 196640, 65537, 1, 262176, 65537, 1, 327712, 65537, 1, 393248, 65537, 1, 458784, 65537, 1, 524320, 65537, 1, 589856, 65537, 1, 655392, 65537, 1, 720928, 65537, 1, 786464, 65537, 1, 852000, 65537, 1, 196641, 65537, 1, 262177, 65537, 1, 327713, 65537, 1, 393249, 65537, 1, 458785, 65537, 1, 524321, 65537, 1, 589857, 65537, 1, 655393, 65537, 1, 720929, 65537, 1, 786465, 65537, 1, 852001, 65537, 1, 196642, 65537, 1, 262178, 65537, 1, 327714, 65537, 1, 393250, 65537, 1, 458786, 65537, 1, 524322, 65537, 1, 589858, 65537, 1, 655394, 65537, 1, 720930, 65537, 1, 786466, 65537, 1, 852002, 65537, 1, 196643, 65537, 1, 262179, 65537, 1, 327715, 65537, 1, 393251, 65537, 1, 458787, 65537, 1, 524323, 65537, 1, 589859, 65537, 1, 655395, 65537, 1, 720931, 65537, 1, 786467, 65537, 1, 852003, 65537, 1, 196644, 65537, 1, 262180, 65537, 1, 327716, 65537, 1, 393252, 65537, 1, 458788, 65537, 1, 524324, 65537, 1, 589860, 65537, 1, 655396, 65537, 1, 720932, 65537, 1, 786468, 65537, 1, 852004, 65537, 1, 196645, 65537, 1, 262181, 65537, 1, 327717, 65537, 1, 393253, 65537, 1, 458789, 65537, 1, 524325, 65537, 1, 589861, 65537, 1, 655397, 65537, 1, 720933, 65537, 1, 786469, 65537, 1, 852005, 65537, 1, 196646, 65537, 1, 262182, 65537, 1, 327718, 65537, 1, 393254, 65537, 1, 458790, 65537, 1, 524326, 65537, 1, 589862, 65537, 1, 655398, 65537, 1, 720934, 65537, 1, 786470, 65537, 1, 852006, 65537, 1, 196647, 65537, 1, 262183, 65537, 1, 327719, 65537, 1, 393255, 65537, 1, 458791, 65537, 1, 524327, 65537, 1, 589863, 65537, 1, 655399, 65537, 1, 720935, 65537, 1, 786471, 65537, 1, 852007, 65537, 1, 196648, 65537, 1, 262184, 65537, 1, 327720, 65537, 1, 393256, 65537, 1, 458792, 65537, 1, 524328, 65537, 1, 589864, 65537, 1, 655400, 65537, 1, 720936, 65537, 1, 786472, 65537, 1, 852008, 65537, 1, 196649, 65537, 1, 262185, 65537, 1, 327721, 65537, 1, 393257, 65537, 1, 458793, 65537, 1, 524329, 65537, 1, 589865, 65537, 1, 655401, 65537, 1, 720937, 65537, 1, 786473, 65537, 1, 852009, 65537, 1, 196650, 65537, 1, 262186, 65537, 1, 327722, 65537, 1, 393258, 65537, 1, 458794, 65537, 1, 524330, 65537, 1, 589866, 65537, 1, 655402, 65537, 1, 720938, 65537, 1, 786474, 65537, 1, 852010, 65537, 1, 196651, 65537, 1, 262187, 65537, 1, 327723, 65537, 1, 393259, 65537, 1, 458795, 65537, 1, 524331, 65537, 1, 589867, 65537, 1, 655403, 65537, 1, 720939, 65537, 1, 786475, 65537, 1, 852011, 65537, 1, 196652, 65537, 1, 262188, 65537, 1, 327724, 65537, 1, 393260, 65537, 1, 458796, 65537, 1, 524332, 65537, 1, 589868, 65537, 1, 655404, 65537, 1, 720940, 65537, 1, 786476, 65537, 1, 852012, 65537, 1, 196653, 65537, 1, 262189, 65537, 1, 327725, 65537, 1, 393261, 65537, 1, 458797, 65537, 1, 524333, 65537, 1, 589869, 65537, 1, 655405, 65537, 1, 720941, 65537, 1, 786477, 65537, 1, 852013, 65537, 1, 196654, 65537, 1, 262190, 65537, 1, 327726, 65537, 1, 393262, 65537, 1, 458798, 65537, 1, 524334, 65537, 1, 589870, 65537, 1, 655406, 65537, 1, 720942, 65537, 1, 786478, 65537, 1, 852014, 65537, 1, 196655, 65537, 1, 262191, 65537, 1, 327727, 65537, 1, 393263, 65537, 1, 458799, 65537, 1, 524335, 65537, 1, 589871, 65537, 1, 655407, 65537, 1, 720943, 65537, 1, 786479, 65537, 1, 852015, 65537, 1, 196656, 65537, 1, 262192, 65537, 1, 327728, 65537, 1, 393264, 65537, 1, 458800, 65537, 1, 524336, 65537, 1, 589872, 65537, 1, 655408, 65537, 1, 720944, 65537, 1, 786480, 65537, 1, 852016, 65537, 1, 196657, 65537, 1, 262193, 65537, 1, 327729, 65537, 1, 393265, 65537, 1, 458801, 65537, 1, 524337, 65537, 1, 589873, 65537, 1, 655409, 65537, 1, 720945, 65537, 1, 786481, 65537, 1, 852017, 65537, 1, 1114129, 1, 0, 2031633, 1, 2, 1966097, 1, 1, 1900561, 1, 1, 1835025, 1, 1, 1769489, 1, 1, 1703953, 1, 1, 1638417, 1, 1, 1572881, 1, 1, 1507345, 1, 1, 1441809, 1, 1, 1376273, 1, 1, 1310737, 1, 1, 1245201, 1, 1, 1179665, 1, 1, 1114144, 131073, 0, 2031634, 65537, 2, 2031635, 65537, 2, 2031636, 65537, 2, 2031637, 65537, 2, 2031638, 65537, 2, 2031639, 65537, 2, 2031640, 65537, 2, 2031641, 65537, 2, 2031642, 65537, 2, 2031643, 65537, 2, 2031644, 65537, 2, 2031645, 65537, 2, 2031646, 65537, 2, 2031647, 65537, 2, 2031648, 131073, 2, 1179680, 131073, 1, 1245216, 131073, 1, 1310752, 131073, 1, 1376288, 131073, 1, 1441824, 131073, 1, 1507360, 131073, 1, 1572896, 131073, 1, 1638432, 131073, 1, 1703968, 131073, 1, 1769504, 131073, 1, 1835040, 131073, 1, 1900576, 131073, 1, 1966112, 131073, 1, 1114130, 65537, 0, 1114131, 65537, 0, 1114132, 65537, 0, 1114133, 65537, 0, 1114134, 65537, 0, 1114135, 65537, 0, 1114136, 65537, 0, 1114137, 65537, 0, 1114138, 65537, 0, 1114139, 65537, 0, 1114140, 65537, 0, 1114141, 65537, 0, 1114142, 65537, 0, 1114143, 65537, 0, 1572890, 65537, 1, 1507354, 65537, 1, 1441818, 65537, 1, 1376282, 65537, 1, 1310746, 65537, 1, 1245210, 65537, 1, 1179674, 65537, 1, 1179673, 65537, 1, 1179672, 65537, 1, 1179671, 65537, 1, 1179670, 65537, 1, 1179669, 65537, 1, 1179668, 65537, 1, 1179667, 65537, 1, 1179666, 65537, 1, 1245202, 65537, 1, 1310738, 65537, 1, 1376274, 65537, 1, 1441810, 65537, 1, 1507346, 65537, 1, 1572882, 65537, 1, 1638418, 65537, 1, 1703954, 65537, 1, 1769490, 65537, 1, 1835026, 65537, 1, 1900562, 65537, 1, 1966098, 65537, 1, 1966099, 65537, 1, 1900563, 65537, 1, 1835027, 65537, 1, 1769491, 65537, 1, 1703955, 65537, 1, 1638419, 65537, 1, 1572883, 65537, 1, 1507347, 65537, 1, 1441811, 65537, 1, 1376275, 65537, 1, 1310739, 65537, 1, 1245203, 65537, 1, 1245204, 65537, 1, 1310740, 65537, 1, 1376276, 65537, 1, 1441812, 65537, 1, 1507348, 65537, 1, 1572884, 65537, 1, 1638420, 65537, 1, 1703956, 65537, 1, 1769492, 65537, 1, 1835028, 65537, 1, 1900564, 65537, 1, 1966100, 65537, 1, 1966101, 65537, 1, 1900565, 65537, 1, 1835029, 65537, 1, 1769493, 65537, 1, 1703957, 65537, 1, 1638421, 65537, 1, 1572885, 65537, 1, 1507349, 65537, 1, 1441813, 65537, 1, 1376277, 65537, 1, 1310741, 65537, 1, 1245205, 65537, 1, 1245206, 65537, 1, 1310742, 65537, 1, 1376278, 65537, 1, 1441814, 65537, 1, 1507350, 65537, 1, 1572886, 65537, 1, 1638422, 65537, 1, 1703958, 65537, 1, 1769494, 65537, 1, 1835030, 65537, 1, 1900566, 65537, 1, 1966102, 65537, 1, 1966103, 65537, 1, 1900567, 65537, 1, 1835031, 65537, 1, 1769495, 65537, 1, 1703959, 65537, 1, 1638423, 65537, 1, 1572887, 65537, 1, 1507351, 65537, 1, 1441815, 65537, 1, 1376279, 65537, 1, 1310743, 65537, 1, 1245207, 65537, 1, 1245208, 65537, 1, 1310744, 65537, 1, 1376280, 65537, 1, 1441816, 65537, 1, 1507352, 65537, 1, 1572888, 65537, 1, 1638424, 65537, 1, 1703960, 65537, 1, 1769496, 65537, 1, 1835032, 65537, 1, 1900568, 65537, 1, 1966104, 65537, 1, 1966105, 65537, 1, 1900569, 65537, 1, 1835033, 65537, 1, 1769497, 65537, 1, 1703961, 65537, 1, 1638425, 65537, 1, 1572889, 65537, 1, 1507353, 65537, 1, 1441817, 65537, 1, 1376281, 65537, 1, 1310745, 65537, 1, 1245209, 65537, 1, 1638426, 65537, 1, 1703962, 65537, 1, 1769498, 65537, 1, 1835034, 65537, 1, 1900570, 65537, 1, 1966106, 65537, 1, 1966107, 65537, 1, 1900571, 65537, 1, 1835035, 65537, 1, 1769499, 65537, 1, 1703963, 65537, 1, 1638427, 65537, 1, 1572891, 65537, 1, 1507355, 65537, 1, 1441819, 65537, 1, 1376283, 65537, 1, 1310747, 65537, 1, 1245211, 65537, 1, 1179675, 65537, 1, 1179676, 65537, 1, 1245212, 65537, 1, 1310748, 65537, 1, 1376284, 65537, 1, 1441820, 65537, 1, 1507356, 65537, 1, 1572892, 65537, 1, 1638428, 65537, 1, 1703964, 65537, 1, 1769500, 65537, 1, 1835036, 65537, 1, 1900572, 65537, 1, 1966108, 65537, 1, 1966109, 65537, 1, 1900573, 65537, 1, 1835037, 65537, 1, 1769501, 65537, 1, 1703965, 65537, 1, 1638429, 65537, 1, 1572893, 65537, 1, 1507357, 65537, 1, 1441821, 65537, 1, 1376285, 65537, 1, 1310749, 65537, 1, 1245213, 65537, 1, 1179677, 65537, 1, 1179678, 65537, 1, 1245214, 65537, 1, 1310750, 65537, 1, 1376286, 65537, 1, 1441822, 65537, 1, 1507358, 65537, 1, 1572894, 65537, 1, 1638430, 65537, 1, 1703966, 65537, 1, 1769502, 65537, 1, 1835038, 65537, 1, 1900574, 65537, 1, 1966110, 65537, 1, 1966111, 65537, 1, 1900575, 65537, 1, 1835039, 65537, 1, 1769503, 65537, 1, 1703967, 65537, 1, 1638431, 65537, 1, 1572895, 65537, 1, 1507359, 65537, 1, 1441823, 65537, 1, 1376287, 65537, 1, 1310751, 65537, 1, 1245215, 65537, 1, 1179679, 65537, 1, 2228241, 65537, 0, 2228224, 65537, 0, 2228225, 65537, 0, 2228226, 65537, 0, 2228227, 65537, 0, 2228228, 65537, 0, 2228229, 65537, 0, 2228230, 65537, 0, 2228231, 65537, 0, 2228232, 65537, 0, 2228233, 65537, 0, 2228234, 65537, 0, 2228235, 65537, 0, 2228236, 65537, 0, 2228237, 65537, 0, 2228238, 65537, 0, 2228239, 65537, 0, 2228240, 65537, 0, 2228242, 65537, 0, 2228243, 65537, 0, 2228244, 65537, 0, 2228245, 65537, 0, 2228246, 65537, 0, 2228247, 65537, 0, 2228248, 65537, 0, 2228249, 65537, 0, 2228250, 65537, 0, 2228251, 65537, 0, 2228252, 65537, 0, 2228253, 65537, 0, 2228254, 65537, 0, 2228255, 65537, 0, 2228256, 65537, 0, 2228257, 65537, 0, 2228258, 65537, 0, 2228259, 65537, 0, 2228260, 65537, 0, 2228261, 65537, 0, 2228262, 65537, 0, 2228263, 65537, 0, 2228264, 65537, 0, 2228265, 65537, 0, 2228266, 65537, 0, 2228267, 65537, 0, 2228268, 65537, 0, 2228269, 65537, 0, 2228270, 65537, 0, 2228271, 65537, 0, 2228272, 65537, 0, 2228273, 65537, 0, 2424832, 65537, 2, 2424833, 65537, 2, 2424834, 65537, 2, 2424835, 65537, 2, 2424836, 65537, 2, 2424837, 65537, 2, 2424838, 65537, 2, 2424839, 65537, 2, 2424840, 65537, 2, 2424841, 65537, 2, 2424842, 65537, 2, 2424843, 65537, 2, 2424844, 65537, 2, 2424845, 65537, 2, 2424846, 65537, 2, 2424847, 65537, 2, 2424848, 65537, 2, 2424849, 65537, 2, 2424850, 65537, 2, 2424851, 65537, 2, 2424852, 65537, 2, 2424853, 65537, 2, 2424854, 65537, 2, 2424855, 65537, 2, 2424856, 65537, 2, 2424857, 65537, 2, 2424858, 65537, 2, 2424859, 65537, 2, 2424860, 65537, 2, 2424861, 65537, 2, 2424862, 65537, 2, 2424863, 65537, 2, 2424864, 65537, 2, 2424865, 65537, 2, 2424866, 65537, 2, 2424867, 65537, 2, 2424868, 65537, 2, 2424869, 65537, 2, 2424870, 65537, 2, 2424871, 65537, 2, 2424872, 65537, 2, 2424873, 65537, 2, 2424874, 65537, 2, 2424875, 65537, 2, 2424876, 65537, 2, 2424877, 65537, 2, 2424878, 65537, 2, 2424879, 65537, 2, 2424880, 65537, 2, 2424881, 65537, 2, 2293760, 65537, 1, 2359296, 65537, 1, 2293761, 65537, 1, 2359297, 65537, 1, 2293762, 65537, 1, 2359298, 65537, 1, 2293763, 65537, 1, 2359299, 65537, 1, 2293764, 65537, 1, 2359300, 65537, 1, 2293765, 65537, 1, 2359301, 65537, 1, 2293766, 65537, 1, 2359302, 65537, 1, 2293767, 65537, 1, 2359303, 65537, 1, 2293768, 65537, 1, 2359304, 65537, 1, 2293769, 65537, 1, 2359305, 65537, 1, 2293770, 65537, 1, 2359306, 65537, 1, 2293771, 65537, 1, 2359307, 65537, 1, 2293772, 65537, 1, 2359308, 65537, 1, 2293773, 65537, 1, 2359309, 65537, 1, 2293774, 65537, 1, 2359310, 65537, 1, 2293775, 65537, 1, 2359311, 65537, 1, 2293776, 65537, 1, 2359312, 65537, 1, 2293777, 65537, 1, 2359313, 65537, 1, 2293778, 65537, 1, 2359314, 65537, 1, 2293779, 65537, 1, 2359315, 65537, 1, 2293780, 65537, 1, 2359316, 65537, 1, 2293781, 65537, 1, 2359317, 65537, 1, 2293782, 65537, 1, 2359318, 65537, 1, 2293783, 65537, 1, 2359319, 65537, 1, 2293784, 65537, 1, 2359320, 65537, 1, 2293785, 65537, 1, 2359321, 65537, 1, 2293786, 65537, 1, 2359322, 65537, 1, 2293787, 65537, 1, 2359323, 65537, 1, 2293788, 65537, 1, 2359324, 65537, 1, 2293789, 65537, 1, 2359325, 65537, 1, 2293790, 65537, 1, 2359326, 65537, 1, 2293791, 65537, 1, 2359327, 65537, 1, 2293792, 65537, 1, 2359328, 65537, 1, 2293793, 65537, 1, 2359329, 65537, 1, 2293794, 65537, 1, 2359330, 65537, 1, 2293795, 65537, 1, 2359331, 65537, 1, 2293796, 65537, 1, 2359332, 65537, 1, 2293797, 65537, 1, 2359333, 65537, 1, 2293798, 65537, 1, 2359334, 65537, 1, 2293799, 65537, 1, 2359335, 65537, 1, 2293800, 65537, 1, 2359336, 65537, 1, 2293801, 65537, 1, 2359337, 65537, 1, 2293802, 65537, 1, 2359338, 65537, 1, 2293803, 65537, 1, 2359339, 65537, 1, 2293804, 65537, 1, 2359340, 65537, 1, 2293805, 65537, 1, 2359341, 65537, 1, 2293806, 65537, 1, 2359342, 65537, 1, 2293807, 65537, 1, 2359343, 65537, 1, 2293808, 65537, 1, 2359344, 65537, 1, 2293809, 65537, 1, 2359345, 65537, 1)

[node name="objMusicPlayer" parent="Environment" instance=ExtResource("3_h0b7q")]
position = Vector2(-16, 16)
song_id = ExtResource("4_o77qd")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 800.0
offset_bottom = 240.0
theme_override_colors/font_outline_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("5_uvw3o")
theme_override_font_sizes/font_size = 70
text = "ReloadedK's Godot Fangame Engine"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 272.0
offset_right = 528.0
offset_bottom = 512.0
theme_override_constants/separation = 80
alignment = 1

[node name="StartGame" parent="ButtonContainer" instance=ExtResource("7_34exa")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ExitGame")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Options")
action_mode = 0
_text = "Start Game"

[node name="Options" parent="ButtonContainer" instance=ExtResource("7_34exa")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ExitGame")
action_mode = 0
_text = "Options"

[node name="ExitGame" parent="ButtonContainer" instance=ExtResource("7_34exa")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Options")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../StartGame")
action_mode = 0
_text = "Exit Game"

[node name="BottomText" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Accept" type="HBoxContainer" parent="BottomText"]
layout_mode = 0
offset_top = 544.0
offset_right = 800.0
offset_bottom = 608.0

[node name="Label" type="Label" parent="BottomText/Accept"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("5_uvw3o")
theme_override_font_sizes/font_size = 30
text = " [Shift] Select"

[node name="Exit" type="HBoxContainer" parent="BottomText"]
layout_mode = 0
offset_top = 544.0
offset_right = 800.0
offset_bottom = 608.0
alignment = 2

[node name="Label" type="Label" parent="BottomText/Exit"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("5_uvw3o")
theme_override_font_sizes/font_size = 30
text = "[Esc] Exit Game "

[connection signal="pressed" from="ButtonContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ButtonContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitGame" to="." method="_on_exit_game_pressed"]
